Bug 1579664 - Migrate compositor GLContexts to the active GPU after a GPU switch. r=jgilbert

MigrateToActiveGPU is only called on compositor GLContexts, not for WebGL.
See bug 1597547 for WebGL.

After this fix, the situation can be improved in multiple ways:
 - Rather than moving contexts between GPUs, it would be better to have separate
   contexts for each GPU, and teach our compositors to switch a window over to
   a new context.
 - Instead of creating a fresh context to obtain the "preferred" GPU, we should
   find the GPU that drives the display on which the context's results are going
   to be displayed.

Differential Revision: https://phabricator.services.mozilla.com/D53719

--HG--
extra : moz-landing-system : lando