widget/cocoa/nsChildView.mm
@@ -1708,6 +1708,12 @@ bool nsChildView::PreRender(WidgetRenderingContext* aContext) {
   // composition is done, thus keeping the GL context locked forever.
   mViewTearDownLock.Lock();
 
+  UniquePtr<GLManager> manager(GLManager::CreateGLManager(aContext->mLayerManager));
+  gl::GLContext* gl = manager ? manager->gl() : aContext->mGL;
+  if (gl) {
+    GLContextCGL::Cast(gl)->MigrateToActiveGPU();
+  }
+
   return true;
 }
 
